Fixed the styling for the first page to render correctly on mobile phones and tablets

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,9 @@
     --color-dark: hsl(var(--primary-hue), 5%, var(--dark-lightness));
 
     /* GENERAL CONTAINER VARIABLES */
-    --container-width-lg: 76%;
-    --container-width-md: 90%;
+    --container-width-lg: 90%;
+    --container-width-md: 76%;
+    --container-width-sm: 60%;
 
     /* BORDER RADIUS VARIABLES */
     --border-radius-1: 1.2rem;
@@ -42,16 +43,6 @@ body {
     line-height: 1.6;
     font-size: 0.9rem;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* THEME change using react */
 main.color-1 {
@@ -88,13 +79,6 @@ main {
     color: var(--color-dark);
     --color-primary: hsl(var(--primary-hue), 89%, 41%);
 }
-
-
-
-
-
-
-
 
 /* GENERAL CONTAINER CLASS */
 .container {
@@ -240,10 +224,6 @@ img {
         font-size: 2rem;
     }
 }
-
-
-
-
 
 /* MEDIA QUERIES (phones) */
 @media screen and (max-width: 600px) {
